--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,6 @@
 [ {
   "id" : "com.piqnt.o",
-  "name" : "O! +source",
+  "name" : "O! +Source",
   "index" : "http://piqnt.com/o/",
   "tags" : "game"
 }, {
